# shade-skips

./: README.md  setup.cfg  shade-skips.py
src/shade_skips.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
