[metadata]
name = shade-skips
version = 1.0
author = Sundarakrishnan Ganesh
author_email = sundarakrishnan.ganesh@gmail.com
description = A simple validation algorithm to prevent SQL Injection vulnerabilities and Cross-site scripting vulnerabilities in your website.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sundarakrishnang/shade-skips
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src